--- a/src/main/resources/templates/attraction/list.html
+++ b/src/main/resources/templates/attraction/list.html
@@ -10,36 +10,150 @@
 <div class="container">
     <div layout:fragment="content" class="content">
 
-        <a th:href="|@{/attraction/write}|" class="btn btn-danger">
-            글쓰기
-        </a>
-        <br>
-        <br>
-        <table class="table">
-            <thead>
-            <tr>
-                <th scope="col" class="">글 번호</th>
-                <th scope="col" class="">제목</th>
-                <th scope="col" class="text-center">작성자</th>
-                <th scope="col" class="text-center">작성일</th>
-                <th scope="col" class="text-center">조회수</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="att, status: ${atrc}">
-                <td th:text="${att.ano}" class=""></td>
-                <!-- T(thymeleaf 에서 제공하는 객체에 접근하는 방법)-->
-                <!--T(com.shop.constant.ItemSellStatus).SELL-->
-                <td>
-                    <a th:href="|@{/attraction/read(ano=${att.ano})}|" class="text-center">[[${att.title}]]</a>
-                </td>
-                <td th:text="${att.writer}" class="text-center"></td>
-                <td th:text="${#temporals.format(att.regTime, 'yyyy-MM-dd hh:mm')}" class="text-center"></td>
-                <td th:text="${att.viewCount}" class="text-center"></td>
-            </tr>
-            </tbody>
-        </table>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        게시판 <a class="btn btn-default" href="/attraction/write">글쓰기</a>
+                    </div>
+                    <div class="panel-body">
+                        <div id="dataTables-example_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="dataTables_length" id="dataTables-example_length">
+
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div id="dataTables-example_filter" class="dataTables_filter">
+                                        <form action="/attraction/list" method="get">
+                                            <input type="hidden" name="size" th:value="${pageRequestDTO.size}">
+                                            <select name="type" aria-controls="dataTables-example" class="form-control input-sm">
+                                                <option value="">------------</option>
+                                                <option value="t" th:selected="${pageRequestDTO.type == 't'}">제목</option>
+                                                <option value="c" th:selected="${pageRequestDTO.type == 'c'}">내용</option>
+                                                <option value="w" th:selected="${pageRequestDTO.type == 'ca'}">카테고리</option>
+                                                <option value="tc" th:selected="${pageRequestDTO.type == 'tc'}">제목+내용</option>
+                                                <option value="tcw" th:selected="${pageRequestDTO.type == 'tcca'}">전체</option>
+                                            </select>
+
+                                            <label>
+                                                <input type="search" name="keyword" th:value="${pageRequestDTO.keyword}" class="form-control input-sm" placeholder="" aria-controls="dataTables-example">
+                                            </label>
+                                            <button type="submit" class="btn btn-defaulf searchBtn">검색</button>
+                                            <button type="button" class="btn btn-defaulf clearBtn">Clear</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <table width="100%" class="table table-striped table-bordered table-hover dataTable no-footer dtr-inline" id="dataTables-example1" role="grid" aria-describedby="dataTables-example_info" style="width: 100%;">
+                                        <thead>
+                                        <tr role="row">
+                                            <th class="sorting" tabindex="0" aria-controls="dataTables-examplee" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending" style="width: 162.667px;">ano</th>
+                                            <th class="sortingg" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending" style="width: 197.667px;">title</th>
+                                            <th class="sorting_ascg" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column descending" style="width: 181.667px;" aria-sort="ascending">writer</th>
+                                            <th class="sortingg" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending" style="width: 140.667px;">regTime</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody th:with="link = ${pageRequestDTO.getLink()}">
+                                        <tr class="gradeU odd" role="row" th:each="dto: ${list.dtoList}">
+                                            <td class="">[[${dto.ano}]]</td>
+                                            <td class="">
+                                                <a th:href="|@{/attraction/read(ano=${dto.ano})}&${link}|">[[${dto.title}]]</a>
+                                            </td>
+                                            <td class="sorting_1">[[${dto.writer}]]</td>
+                                            <td class="center">[[${#temporals.format(dto.regTime, 'yyyy-MM-dd')}]]</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+
+                            <div class="row">
+
+                                <div class="col-sm-6">
+                                    <div class="dataTables_paginate paging_simple_numbers" id="dataTables-example_paginate">
+                                        <ul class="pagination">
+                                            <li th:if="${list.prev}" class="paginate_button previous" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous">
+                                                <a th:data-num="${list.start -1}">Previous</a>
+                                            </li>
+                                            <!--thymeleaf에는 순서를 표기하는 #numbers.sequence가 있다-->
+                                            <th:block th:each="i: ${#numbers.sequence(list.start, list.end)}">
+                                                <li th:class="${list.page == i} ? 'paginate_button active' : 'paginate_button' " aria-controls="dataTables-example" tabindex="0">
+                                                    <a th:data-num="${i}">[[${i}]]</a>
+                                                </li>
+                                            </th:block>
+
+                                            <li th:if="${list.next}" class="paginate_button next" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_next">
+                                                <a th:data-num="${list.end +1}">Next</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+<!--        <table class="table">-->
+<!--            <thead>-->
+<!--            <tr>-->
+<!--                <th scope="col" class="">글 번호</th>-->
+<!--                <th scope="col" class="">제목</th>-->
+<!--                <th scope="col" class="text-center">작성자</th>-->
+<!--                <th scope="col" class="text-center">작성일</th>-->
+<!--                <th scope="col" class="text-center">조회수</th>-->
+<!--            </tr>-->
+<!--            </thead>-->
+<!--            <tbody>-->
+<!--            <tr th:each="att, status: ${atrc}">-->
+<!--                <td th:text="${att.ano}" class=""></td>-->
+<!--                &lt;!&ndash; T(thymeleaf 에서 제공하는 객체에 접근하는 방법)&ndash;&gt;-->
+<!--                &lt;!&ndash;T(com.shop.constant.ItemSellStatus).SELL&ndash;&gt;-->
+<!--                <td>-->
+<!--                    <a th:href="|@{/attraction/read(ano=${att.ano})}|" class="text-center">[[${att.title}]]</a>-->
+<!--                </td>-->
+<!--                <td th:text="${att.writer}" class="text-center"></td>-->
+<!--                <td th:text="${#temporals.format(att.regTime, 'yyyy-MM-dd hh:mm')}" class="text-center"></td>-->
+<!--                <td th:text="${att.viewCount}" class="text-center"></td>-->
+<!--            </tr>-->
+<!--            </tbody>-->
+<!--        </table>-->
     </div>
 </div>
+<script layout:fragment="script" th:inline="javascript">
+
+    const result = [[${result}]];
+    if(result){
+        alert(result+" 번 글이 등록되었습니다")
+    }
+
+    document.querySelector(".pagination").addEventListener("click", function (e){
+        e.preventDefault();
+        e.stopPropagation();
+        let target = e.target;
+
+        if(target.tagName !== 'A'){
+            return;
+        }
+
+        let num = target.getAttribute("data-num");
+        let formObj = document.querySelector("form");
+
+        formObj.innerHTML += `<input type="hidden" name="page" value="${num}">`;
+        formObj.submit();
+    });
+
+    document.querySelector(".ClearBtn").addEventListener("click", function (e){
+        e.preventDefault();
+        e.stopPropagation();
+
+        self.location = '/attraction/list';
+    });
+</script>
 </body>
 </html>
